--- a/index.htm
+++ b/index.htm
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="hello , I am aly amer and I have 16y , this is my first website and its a just simple trying to practise that i learned">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type="image/png" href="media/tab-img.png" >
     <link rel="preconnect" href="https://fonts.googleapis.com">
