--- a/index.htm
+++ b/index.htm
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <title>Aly Amer</title>
+    <title>aly amer website | مرحبا انا علي عامر وهذا موقعي الشخصي</title>
 </head>
 <body>
     <!-- Header -->
